# bearlibterminal

./: .clang-format  .gitignore  CMakeLists.txt  TODO.md
.github/workflows/: build.yml
Samples/Omni/: CMakeLists.txt
Samples/Omni/Source/: AutoGenerated.cpp  BasicOutput.cpp  Common.cpp  Common.hpp  DefaultFont.cpp  DynamicSprites.cpp  ExtendedBasics.cpp  ExtendedInterlayer.cpp  ExtendedSmoothScroll.cpp  FormattedLog.cpp  InputFiltering.cpp  Keyboard.cpp  Layers.cpp  Main.cpp  ManualCellsize.cpp  Mouse.cpp  MultipleFonts.cpp  Pick.cpp  Speed.cpp  Sprites.cpp  TextAlignment.cpp  TextInput.cpp  Tilesets.cpp  WindowResize.cpp  WindowsGlyphList4.cpp  WindowsGlyphList4.hpp
Scripts/: clang-format.py
Terminal/: CMakeLists.txt
Terminal/Dependencies/FreeType/: CMakeLists.txt
Terminal/Dependencies/PicoPNG/: CMakeLists.txt
Terminal/Source/: Atlas.cpp  Atlas.hpp  BOM.cpp  BOM.hpp  Base64.cpp  Base64.hpp  BearLibTerminal.cpp  Bitmap.cpp  Bitmap.hpp  BitmapTileset.cpp  BitmapTileset.hpp  Builtin.Codepages.hpp  Builtin.DefaultFont.hpp  CocoaWindow.h  CocoaWindow.mm  Color.hpp  Config.cpp  Config.hpp  DynamicTileset.cpp  DynamicTileset.hpp  Encoding.cpp  Encoding.hpp  Geometry.hpp  Keystroke.cpp  Keystroke.hpp  LoadBMP.cpp  LoadBitmap.cpp  LoadBitmap.hpp  LoadJPEG.cpp  LoadPNG.cpp  Log.cpp  Log.hpp  Luaopen.cpp  OpenGL.cpp  OpenGL.hpp  OptionGroup.cpp  OptionGroup.hpp  Options.cpp  Options.hpp  Palette.cpp  (+27 more)
